--- a/0928.md
+++ b/0928.md
@@ -1,4 +1,4 @@
-# 第一份作業
+# 第一份作業:說明隱寫術 放在你的GITHUB
 - 隱寫術steganography
  - 圖片隱寫(Image Steganography)
    - 將資訊保存再png.jpg.bmp等圖片格式中。
@@ -14,4 +14,8 @@
  - 資料夾隱寫(Folder Steganography)
  - 網頁隱寫(Web Steganography)
  - 電子郵件隱寫(Email Steganography)
-
+- 資料來源
+  - [【Day21】隱寫技術 Steganography](https://ithelp.ithome.com.tw/articles/10278407)
+  - [Day8: [Forensic] Steganography](https://ithelp.ithome.com.tw/articles/10219759)
+  - [The Ancient Practice of Steganography](https://www.comptia.org/blog/what-is-steganography)
+  - [Steganography@WIKI](https://en.wikipedia.org/wiki/Steganography)
