--- a/0928.md
+++ b/0928.md
@@ -2,6 +2,7 @@
 - 隱寫術steganography
 - 駭客如何利用隱寫術
   - [駭客藏匿惡意程式於詹姆斯·韋伯太空望遠鏡拍攝之影像中](https://www.nccst.nat.gov.tw/NewsRSSDetail?lang=zh&RSSType=news&seq=16784) 
+  - [Hackers hide malware in James Webb telescope images](https://www.bleepingcomputer.com/news/security/hackers-hide-malware-in-james-webb-telescope-images/)
 - 各種類型的隱寫術
   - 圖片隱寫(Image Steganography)
     - 將資訊保存再png.jpg.bmp等圖片格式中。
